// protoc -I vendor/github.com/open-telemetry/opentelemetry-proto -I pkg/friggpb/ pkg/friggpb/frigg.proto --go_out=plugins=grpc:pkg/friggpb

syntax="proto3";

package friggpb;

import "opentelemetry/proto/collector/trace/v1/trace_service.proto";

service Pusher {
  rpc Push(PushRequest) returns (PushResponse) {};
}

service Querier {
  rpc FindTraceByID(TraceByIDRequest) returns (TraceByIDResponse) {};
}

message TraceByIDRequest {
  bytes traceID = 1;
}

message TraceByIDResponse {
  Trace trace = 1;
}

// todo:  defining a Trace as a bunch of push requests seems dumb-ish.  rename push request to "batch"?
message Trace {
  repeated opentelemetry.proto.collector.trace.v1.ResourceSpans batches = 1;
}

message PushRequest {
  opentelemetry.proto.collector.trace.v1.ResourceSpans batch = 1;
}

message PushResponse {
}